gitops-repo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-book-frontend-deployment
  namespace: tradingbook
  labels:
    app: trading-book-frontend
spec:
  replicas: 3 # Number of identical container copies you want to run
  selector:
    matchLabels:
      app: trading-book-frontend
  template:
    metadata:
      labels:
        app: trading-book-frontend
    spec:
      containers:
      - name: trading-book-frontend
        image: michaelxschneider/trading-book:d2e881d
        ports:
        - containerPort: 3000 # The port your app listens to inside the container
        resources:
          requests:
            memory: "64Mi"   # Minimum memory guaranteed to the container
            cpu: "250m"      # Minimum CPU guaranteed (250 milli-cpus = 0.25 cores)
          limits:
            memory: "128Mi"  # Maximum memory the container can use
            cpu: "500m"      # Maximum CPU the container can use (0.5 cores)
