gitops-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-book-frontend-service
  namespace: tradingbook
spec:
  type: ClusterIP
  selector:
    app: trading-book-frontend
  ports:
    - protocol: TCP
      port: 8080       # Port exposed by the service
      targetPort: 3000 # Matches the containerPort above
