gitops-repo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: tradingbook
spec:
  parentRefs:
  - name: local-web
  rules:
  - backendRefs:
    - name: trading-book-frontend-service
      port: 8080
